--- a/arch/arm/boot/dts/myb-y6ul-14x14.dts
+++ b/arch/arm/boot/dts/myb-y6ul-14x14.dts
@@ -174,12 +174,14 @@
 	};
 };
 
+/*
 &flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_can_3v3>;
 	status = "disabled";
 };
+*/
 
 &flexcan2 {
 	pinctrl-names = "default";
@@ -266,6 +268,7 @@
 	};
 };
 
+/* Format: PAD__SIGNAL */
 &iomuxc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog_1>;
@@ -341,7 +344,7 @@
 		pinctrl_flexcan1: flexcan1grp{
 			fsl,pins = <
 				MX6UL_PAD_UART3_RTS_B__FLEXCAN1_RX	0x1b020
-				MX6UL_PAD_UART3_CTS_B__FLEXCAN1_TX	0x1b020
+				MX6UL_PAD_UART3_CTS_B__FLEXCAN1_TX	0x1b020		/* conflict with pinctrl_uart3 */
 			>;
 		};
 
@@ -488,21 +491,12 @@
 			>;
 		};
 
-		pinctrl_uart2: uart2grp {
+		/* Add uart3 pinctrl */
+		pinctrl_uart3: uart3grp {
 			fsl,pins = <
-				MX6UL_PAD_UART2_TX_DATA__UART2_DCE_TX	0x1b0b1
-				MX6UL_PAD_UART2_RX_DATA__UART2_DCE_RX	0x1b0b1
-				MX6UL_PAD_UART3_RX_DATA__UART2_DCE_RTS	0x1b0b1
-				MX6UL_PAD_UART3_TX_DATA__UART2_DCE_CTS	0x1b0b1
-			>;
-		};
-
-		pinctrl_uart2dte: uart2dtegrp {
-			fsl,pins = <
-				MX6UL_PAD_UART2_TX_DATA__UART2_DTE_RX	0x1b0b1
-				MX6UL_PAD_UART2_RX_DATA__UART2_DTE_TX	0x1b0b1
-				MX6UL_PAD_UART3_RX_DATA__UART2_DTE_CTS	0x1b0b1
-				MX6UL_PAD_UART3_TX_DATA__UART2_DTE_RTS	0x1b0b1
+				MX6UL_PAD_UART3_TX_DATA__UART3_DCE_TX   0x1b0b1	/* Pin properties config */
+				MX6UL_PAD_UART3_RX_DATA__UART3_DCE_RX   0x1b0b1
+				MX6UL_PAD_UART3_CTS_B__GPIO1_IO26       0x1b0b1 /* RS485 RE/DE */
 			>;
 		};
 
@@ -750,12 +744,11 @@
 	status = "okay";
 };
 
-&uart2 {
+&uart3 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart2>;
-	/* for DTE mode, add below change */
-	/* fsl,dte-mode; */
-	/* pinctrl-0 = <&pinctrl_uart2dte>; */
+	pinctrl-0 = <&pinctrl_uart3>;
+	fsl,rs485-gpio-txen = <&gpio1 26 GPIO_ACTIVE_HIGH>; /* Make UART3_DCE_CTS High */
+	linux,rs485-enabled-at-boot-time;
 	status = "okay";
 };
 
