--- a/arch/arm/boot/dts/myb-y6ull-14x14.dts
+++ b/arch/arm/boot/dts/myb-y6ull-14x14.dts
@@ -464,19 +464,12 @@
 			>;
 		};
 
-		pinctrl_uart2: uart2grp {
+		/* Add uart3 pinctrl */
+		pinctrl_uart3: uart3grp {
 			fsl,pins = <
-				MX6UL_PAD_UART2_TX_DATA__UART2_DCE_TX	0x1b0b1
-				MX6UL_PAD_UART2_RX_DATA__UART2_DCE_RX	0x1b0b1
-			>;
-		};
-
-		pinctrl_uart2dte: uart2dtegrp {
-			fsl,pins = <
-				MX6UL_PAD_UART2_TX_DATA__UART2_DTE_RX	0x1b0b1
-				MX6UL_PAD_UART2_RX_DATA__UART2_DTE_TX	0x1b0b1
-				MX6UL_PAD_UART3_RX_DATA__UART2_DTE_CTS	0x1b0b1
-				MX6UL_PAD_UART3_TX_DATA__UART2_DTE_RTS	0x1b0b1
+				MX6UL_PAD_UART3_TX_DATA__UART3_DCE_TX   0x1b0b1	/* Pin properties config */
+				MX6UL_PAD_UART3_RX_DATA__UART3_DCE_RX   0x1b0b1
+				MX6UL_PAD_UART3_CTS_B__GPIO1_IO26       0x1b0b1 /* RS485 RE/DE */
 			>;
 		};
 
@@ -738,9 +731,11 @@
 	status = "okay";
 };
 
-&uart2 {
+&uart3 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart2>;
+	pinctrl-0 = <&pinctrl_uart3>;
+	fsl,rs485-gpio-txen = <&gpio1 26 GPIO_ACTIVE_HIGH>; /* Make UART3_DCE_CTS High */
+	linux,rs485-enabled-at-boot-time;
 	status = "okay";
 };
 
